<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addedittask.AddEditTaskFragment">


    <CheckBox
        android:id="@+id/checkBoxImportant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/important"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_priority" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:hint="@string/label"
        app:boxCornerRadiusBottomEnd="@dimen/field_radious"
        app:boxCornerRadiusBottomStart="@dimen/field_radious"
        app:boxCornerRadiusTopEnd="@dimen/field_radious"
        app:boxCornerRadiusTopStart="@dimen/field_radious"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTaskLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="40"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:hint="@string/description"
        app:boxCornerRadiusBottomEnd="@dimen/field_radious"
        app:boxCornerRadiusBottomStart="@dimen/field_radious"
        app:boxCornerRadiusTopEnd="@dimen/field_radious"
        app:boxCornerRadiusTopStart="@dimen/field_radious"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionET"
            style="@style/CustomSubtitle2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="150"
            android:maxLines="3"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tx_priority"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/priority_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTIL" />

    <start.up.tracker.ui.addedittask.RadioGridGroup
        android:id="@+id/group_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_priority">

        <TableRow android:layout_marginTop="0dp">

            <RadioButton
                android:id="@+id/radioButton"
                style="@style/radio_btn"
                android:checked="false"
                android:text="@string/no" />

            <RadioButton
                android:id="@+id/radioButton2"
                style="@style/radio_btn"
                android:checked="false"
                android:text="@string/high" />

            <RadioButton
                android:id="@+id/radioButton3"
                style="@style/radio_btn"
                android:checked="false"
                android:text="@string/average" />

        </TableRow>

        <TableRow android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/radioButton4"
                style="@style/radio_btn"
                android:checked="false"
                android:text="@string/low" />
        </TableRow>


    </start.up.tracker.ui.addedittask.RadioGridGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:contentDescription="@string/fab"
        android:scaleType="fitXY"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>