<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".ui.AddTaskFragment"
    >


    <CheckBox
        android:id="@+id/radioButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:text="@string/important"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_priority" />


    <TextView
        android:id="@+id/tx_label"
        style="@style/fields_hints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/title_top_margin"
        android:text="@string/label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTIL"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/layout_margin"
        android:background="@null"
        app:boxBackgroundColor="?attr/taskColor"
        app:boxCornerRadiusBottomEnd="@dimen/field_radious"
        app:boxCornerRadiusBottomStart="@dimen/field_radious"
        app:boxCornerRadiusTopEnd="@dimen/field_radious"
        app:boxCornerRadiusTopStart="@dimen/field_radious"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleET"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="50"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tx_desc"
        style="@style/fields_hints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTIL" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/layout_margin"
        app:boxBackgroundColor="?attr/taskColor"
        app:boxCornerRadiusBottomEnd="@dimen/field_radious"
        app:boxCornerRadiusBottomStart="@dimen/field_radious"
        app:boxCornerRadiusTopEnd="@dimen/field_radious"
        app:boxCornerRadiusTopStart="@dimen/field_radious"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionET"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="150"
            android:maxLines="3"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tx_priority"
        style="@style/fields_hints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:text="@string/priority_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTIL" />

    <start.up.tracker.ui.RadioGridGroup
        android:id="@+id/group_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_priority">

        <TableRow android:layout_marginTop="0dp">

            <RadioButton
                android:id="@+id/radioButton"
                style="@style/radio_btn"
                android:checked="false"
                android:text="@string/no" />

            <RadioButton
                android:id="@+id/radioButton2"
                style="@style/radio_btn"
                android:checked="false"
                android:text="@string/high" />

            <RadioButton
                android:id="@+id/radioButton3"
                style="@style/radio_btn"
                android:checked="false"
                android:text="@string/average" />

        </TableRow>

        <TableRow android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/radioButton4"
                style="@style/radio_btn"
                android:checked="false"
                android:text="@string/low" />
        </TableRow>


    </start.up.tracker.ui.RadioGridGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:fontFamily="@font/ibm_medium"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/tx_size_16"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>